--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ osx_image: xcode61
 rvm:
 - 2.1.2
 install:
-- ./Scripts/install.sh
+- sudo ./Scripts/install.sh
 script:
-- ./Scripts/build.sh
+- sudo ./Scripts/build.sh
